--- a/module-1/lab-numpy/your-code/Numpy.ipynb
+++ b/module-1/lab-numpy/your-code/Numpy.ipynb
@@ -2,9 +2,44 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.17.4\n",
+      "blas_mkl_info:\n",
+      "  NOT AVAILABLE\n",
+      "blis_info:\n",
+      "  NOT AVAILABLE\n",
+      "openblas_info:\n",
+      "    library_dirs = ['C:\\\\projects\\\\numpy-wheels\\\\numpy\\\\build\\\\openblas']\n",
+      "    libraries = ['openblas']\n",
+      "    language = f77\n",
+      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "blas_opt_info:\n",
+      "    library_dirs = ['C:\\\\projects\\\\numpy-wheels\\\\numpy\\\\build\\\\openblas']\n",
+      "    libraries = ['openblas']\n",
+      "    language = f77\n",
+      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "lapack_mkl_info:\n",
+      "  NOT AVAILABLE\n",
+      "openblas_lapack_info:\n",
+      "    library_dirs = ['C:\\\\projects\\\\numpy-wheels\\\\numpy\\\\build\\\\openblas']\n",
+      "    libraries = ['openblas']\n",
+      "    language = f77\n",
+      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "lapack_opt_info:\n",
+      "    library_dirs = ['C:\\\\projects\\\\numpy-wheels\\\\numpy\\\\build\\\\openblas']\n",
+      "    libraries = ['openblas']\n",
+      "    language = f77\n",
+      "    define_macros = [('HAVE_CBLAS', None)]\n",
+      "None\n"
+     ]
+    }
+   ],
    "source": [
     "# -*- coding: utf-8 -*-\n",
     "\"\"\"\n",
@@ -25,20 +60,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.9128866  0.11038473 0.88182983 0.63835008 0.27987308]\n",
-      "  [0.34708773 0.60491187 0.82082417 0.94179914 0.71101563]\n",
-      "  [0.31014611 0.65122392 0.39079938 0.55773111 0.66005266]]\n",
+      "[[[0.91328374 0.7775166  0.91235125 0.61543902 0.47833068]\n",
+      "  [0.79531529 0.33494419 0.4388135  0.78456021 0.53832667]\n",
+      "  [0.35824368 0.95815725 0.28379073 0.41615495 0.88484227]]\n",
       "\n",
-      " [[0.86794801 0.30386939 0.36700115 0.28122046 0.05093241]\n",
-      "  [0.53717044 0.45148292 0.81066282 0.57225677 0.37375538]\n",
-      "  [0.57824929 0.59548747 0.83940558 0.3027448  0.66258365]]]\n"
+      " [[0.89392358 0.65734649 0.5411469  0.13899177 0.2166955 ]\n",
+      "  [0.58279661 0.39299433 0.78839074 0.17571251 0.44369191]\n",
+      "  [0.54137263 0.14899504 0.93723839 0.39096297 0.51465619]]]\n"
      ]
     }
    ],
@@ -68,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -105,7 +140,7 @@
        "        [1., 1., 1.]]])"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -117,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -146,7 +181,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-25-ac79b0f33101>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#8. Are you able to add a and b? Why or why not?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-6-4d8d9a4d56d4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m#8. Are you able to add a and b? Why or why not?\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0ma\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m# NO :  all the input array dimensions for the concatenation axis must match exactly,\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m \u001b[1;31m# but along dimension 1, the array at index 0 has size 3 and the array at index 1 has size 2\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[1;34m(*args, **kwargs)\u001b[0m\n",
       "\u001b[1;31mValueError\u001b[0m: all the input array dimensions for the concatenation axis must match exactly, but along dimension 1, the array at index 0 has size 3 and the array at index 1 has size 2"
      ]
@@ -161,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +211,7 @@
        "        [1., 1., 1., 1., 1.]]])"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -189,22 +224,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[1.9128866 , 1.11038473, 1.88182983, 1.63835008, 1.27987308],\n",
-       "        [1.34708773, 1.60491187, 1.82082417, 1.94179914, 1.71101563],\n",
-       "        [1.31014611, 1.65122392, 1.39079938, 1.55773111, 1.66005266]],\n",
+       "array([[[1.91328374, 1.7775166 , 1.91235125, 1.61543902, 1.47833068],\n",
+       "        [1.79531529, 1.33494419, 1.4388135 , 1.78456021, 1.53832667],\n",
+       "        [1.35824368, 1.95815725, 1.28379073, 1.41615495, 1.88484227]],\n",
        "\n",
-       "       [[1.86794801, 1.30386939, 1.36700115, 1.28122046, 1.05093241],\n",
-       "        [1.53717044, 1.45148292, 1.81066282, 1.57225677, 1.37375538],\n",
-       "        [1.57824929, 1.59548747, 1.83940558, 1.3027448 , 1.66258365]]])"
+       "       [[1.89392358, 1.65734649, 1.5411469 , 1.13899177, 1.2166955 ],\n",
+       "        [1.58279661, 1.39299433, 1.78839074, 1.17571251, 1.44369191],\n",
+       "        [1.54137263, 1.14899504, 1.93723839, 1.39096297, 1.51465619]]])"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -217,26 +252,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[[0.9128866  0.11038473 0.88182983 0.63835008 0.27987308]\n",
-      "  [0.34708773 0.60491187 0.82082417 0.94179914 0.71101563]\n",
-      "  [0.31014611 0.65122392 0.39079938 0.55773111 0.66005266]]\n",
+      "[[[0.91328374 0.7775166  0.91235125 0.61543902 0.47833068]\n",
+      "  [0.79531529 0.33494419 0.4388135  0.78456021 0.53832667]\n",
+      "  [0.35824368 0.95815725 0.28379073 0.41615495 0.88484227]]\n",
       "\n",
-      " [[0.86794801 0.30386939 0.36700115 0.28122046 0.05093241]\n",
-      "  [0.53717044 0.45148292 0.81066282 0.57225677 0.37375538]\n",
-      "  [0.57824929 0.59548747 0.83940558 0.3027448  0.66258365]]] [[[1.9128866  1.11038473 1.88182983 1.63835008 1.27987308]\n",
-      "  [1.34708773 1.60491187 1.82082417 1.94179914 1.71101563]\n",
-      "  [1.31014611 1.65122392 1.39079938 1.55773111 1.66005266]]\n",
+      " [[0.89392358 0.65734649 0.5411469  0.13899177 0.2166955 ]\n",
+      "  [0.58279661 0.39299433 0.78839074 0.17571251 0.44369191]\n",
+      "  [0.54137263 0.14899504 0.93723839 0.39096297 0.51465619]]] [[[1.91328374 1.7775166  1.91235125 1.61543902 1.47833068]\n",
+      "  [1.79531529 1.33494419 1.4388135  1.78456021 1.53832667]\n",
+      "  [1.35824368 1.95815725 1.28379073 1.41615495 1.88484227]]\n",
       "\n",
-      " [[1.86794801 1.30386939 1.36700115 1.28122046 1.05093241]\n",
-      "  [1.53717044 1.45148292 1.81066282 1.57225677 1.37375538]\n",
-      "  [1.57824929 1.59548747 1.83940558 1.3027448  1.66258365]]]\n"
+      " [[1.89392358 1.65734649 1.5411469  1.13899177 1.2166955 ]\n",
+      "  [1.58279661 1.39299433 1.78839074 1.17571251 1.44369191]\n",
+      "  [1.54137263 1.14899504 1.93723839 1.39096297 1.51465619]]]\n"
      ]
     }
    ],
@@ -248,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -268,14 +303,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.0509324072573363 1.9417991398262877 1.5471228860188928\n"
+      "1.1389917696801657 1.958157249624872 1.5618328534837052\n"
      ]
     }
    ],
@@ -289,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -304,7 +339,7 @@
        "        [0., 0., 0., 0., 0.]]])"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -317,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,12 +366,34 @@
     "# In the end, f should have only the following values: 0, 25, 50, 75, and 100.\n",
     "# Note: you don't have to use Numpy in this question.\n",
     "# \"\"\"\n",
+    "# def new_f(x):\n",
+    "#     for x in d:\n",
+    "#         if d_mean>x>d_min:\n",
+    "#             x==25\n",
+    "#         elif d_max>x>d_mean:\n",
+    "#             x==75\n",
+    "#         elif x==d_mean:\n",
+    "#             x==50\n",
+    "#         elif x==d_min:\n",
+    "#             x==0\n",
+    "#         else:\n",
+    "#             x==d_max\n",
+    "#             x==100\n",
+    "#         return \n",
+    "    \n",
+    "# new_f(f)\n",
+    "# fx= [in d (lambda x: x==25 if d_mean>x>d_min else 0)]\n",
+    "# f[d.where(image_array < 90)] = 0\n",
+    "# f[d.where(lambda x: 100 if x==d_max(x==25 if d_mean>x>d_min else x==75 if d_max>x>d_mean else x==50 if x==d_mean else x==0 if x==d_min)]\n",
     "\n",
-    "apply.lambda(x : )\n",
-    "lambda x: x*10 if x<2 else (x**2 if x<4 else x+10)\n",
+    "          \n",
+    "          \n",
+    "          # f.where(lambda x: 100 if x in d==d_max (x==25 if d_mean>x>d_min in d else x==75 if d_max>x>d_mean in d else x==50 if x==d_mean in d else x==0 if x==d_min in d)\n",
+    "# test= lambda x : 100 if x==d_max in d else (x==1)\n",
+    "# test(f)\n",
+    "# converter = lambda x : x*2 if x < 10 else (x*3 if x < 20 else x)\n",
     "\n",
-    "\n",
-    "\n",
+    "# lambda <args> : <return Value> if <condition > ( <return value > if <condition> else <return value>)\n",
     "# for i in i in d:\n",
     "# #     if d_mean>i>d_min:\n",
     "# #         f(i)==25\n",
